Tweaks, more docs.

--- a/proxy/index.html
+++ b/proxy/index.html
@@ -8,7 +8,10 @@
       CROSSORIGIN="anonymous"></SCRIPT>
 
     <STYLE>
-      H3 > span { color: red; }
+      H3 > span {
+          font-family: sans-serif;
+          color: red;
+      }
     </STYLE>
   </HEAD>
 
